--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -3,28 +3,41 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:columnCount="5"
-    android:rowCount="5">
+    android:columnCount="4"
+    android:rowCount="4"
+    android:padding="5dp">
 
-        <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/item_image"
-            android:layout_gravity="center_horizontal"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_columnSpan="5" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/item_image"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/logo"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_rowSpan="4" />
 
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="title"
-            android:textSize="15sp"
-            android:id="@+id/item_title"
-            android:layout_row="3"
-            android:layout_column="0" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="title"
+        android:textSize="15sp"
+        android:id="@+id/item_title"
+        android:layout_row="2"
+        android:layout_column="1"
+        android:layout_rowWeight="0.1"/>
 
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/deleteCartIv"
+        android:src="@drawable/trash"
+        android:layout_row="2"
+        android:layout_column="3"
+        android:layout_gravity="right"
+        android:clickable="true"/>
 
     <TextView
         android:layout_width="135dp"
@@ -33,14 +46,14 @@
         android:text="price"
         android:layout_row="3"
         android:layout_column="1"
-        android:layout_columnWeight="0.1" />
+        />
 
     <LinearLayout
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="3"
-        android:layout_column="4"
+        android:layout_column="3"
         android:paddingLeft="10dp"
         android:orientation="horizontal">
 
@@ -55,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="0"
-            android:id="@+id/tvQuantity"
+            android:id="@+id/tvQuantityCart"
             android:gravity="center"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="5dp"
@@ -71,4 +84,3 @@
 
 
 </GridLayout>
-
